--- a/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
+++ b/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
@@ -17,3 +17,5 @@ Contains English localizations of values in Manifest.plist files in the playgrou
 "ChapterOnePageTwoName" = "Love to tech";
 
 "ChapterOnePageThreeName" = "Football > Soccer";
+
+"ChapterOnePageFourName" = "See Ya!";
