--- a/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
+++ b/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
@@ -16,6 +16,6 @@ Contains English localizations of values in Manifest.plist files in the playgrou
 
 "ChapterOnePageTwoName" = "Love to tech";
 
-"ChapterOnePageThreeName" = "Football > Soccer";
+"ChapterOnePageThreeName" = "More than football";
 
 "ChapterOnePageFourName" = "See Ya!";
